--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@microsoft/signalr": "^7.0.11",
     "@swimlane/ngx-charts": "^20.4.1",
     "bootstrap": "^5.3.2",
+    "loader": "^2.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
